@@ -1,0 +1,19 @@
+.. _layouts:
+
+=======
+Layouts
+=======
+
+Modified versions of stock layouts may provide some additional functionality
+which benefits from items available in qtile-extras.
+
+To prevent the need for multiple imports, all layouts are available via
+qtile-extras. You can therefore use a single import in your config:
+
+.. code:: python
+
+    # from libqtile import layout
+    from qtile_extras import layout
+
+To see details of modified layouts, please click
+:ref:`here<ref_layouts>`.
