@@ -1,0 +1,11 @@
+.. _ref_layouts:
+
+=======
+Layouts
+=======
+
+.. qtile_module:: qtile_extras.layout._mods
+    :baseclass: libqtile.layout.base.Layout
+    :exclude-base:
+    :no-commands:
+    :show-config:
